2010-11-30 [colin]	3.7.7cvs8

	* src/action.c
		Fix bug #2317, 'Action results in "Bad file descriptor"'
		Introduced in 3.7.6cvs57. In fact the error has been there
		since ages, and only new thing is the verification of the
		various functions return code. Let the stuff work as it
		does, as it seems to do the right thing since ages.

2010-11-28 [colin]	3.7.7cvs7

	* src/gtk/quicksearch.c
		Fix bug #2313, 'CLI quicksearch sometimes returns 
		the same messages twice'. Patch by Sebastien Bigaret

2010-11-25 [paul]	3.7.7cvs6

	* src/prefs_common.c
		make "gtk_can_change_accels" FALSE by default.
		fixes bug #2309, 'Shortcuts should not be modifiable
		by default' (RFE)

2010-11-24 [mones]	3.7.7cvs5

	* src/mainwindow.c
		Add missing shortcuts for marking as spam and ham
		Fixes Debian bug #599547

2010-11-22 [colin]	3.7.7cvs4

	* src/compose.c
		Revert 3.7.6cvs{39,38,37,35,34}. The fact that
		five patches were needed to fix a corner case
		is a good indicator that is was bound to break
		something.

2010-11-21 [colin]	3.7.7cvs3

	* src/plugins/pgpcore/claws.def
		Win32 build fix

2010-11-20 [wwp]	3.7.7cvs2

	* src/main.c
	  Fix either a typo or an irrelevant iff word there.
	  IMO type and recursive possible values should be changed to
	  smth simple and neat here, and help strings be really
	  translatable.

2010-11-20 [colin]	3.7.7cvs1

	* AUTHORS
		Damn, forgot to commit this file twice.

2010-11-19 [paul]	3.7.7
	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.7 unleashed!

2010-11-19 [paul]	3.7.6cvs66

	* po/ca.po
	* po/cs.po
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/id.po
	* po/pt_BR.po
	* po/sk.po
	* po/uk.po
		updated by Miquel Oliete, David Vachulka, Stephan Sachse,
		Ricardo Mones, Flammie Pirinen, wwp, Pader Rezso, MSulchan
		Darmawan, Frederico Goncalves Guimaraes, Slavko, Yarema

2010-11-17 [colin]	3.7.6cvs65

	* src/common/utils.c
		Separate email address from timestamp with a dot.
		Fix coding style.

2010-11-17 [colin]	3.7.6cvs64
