@@ -4070,3 +4070,4 @@
 ( cvs diff -u -r 1.204.2.197 -r 1.204.2.198 src/prefs_common.c;  ) > 3.7.7cvs6.patchset
 ( cvs diff -u -r 1.1.2.98 -r 1.1.2.99 src/gtk/quicksearch.c;  ) > 3.7.7cvs7.patchset
 ( cvs diff -u -r 1.12.2.62 -r 1.12.2.63 src/action.c;  ) > 3.7.7cvs8.patchset
+( cvs diff -u -r 1.23.2.34 -r 1.23.2.35 src/crash.c;  ) > 3.7.7cvs9.patchset
